[package]
name = "rpcap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["rpcap-packet"]

[dependencies]
rpcap-packet = { path = "rpcap-packet" }
pcap = { version = "1.2.0", optional = true }

[dev-dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
csv = "1.3.0"
pcap = { version = "1.2.0" }
serde = { version = "1.0.197", features = ["derive"] }

[features]
default = ["pcap"]
