[package]
name = "rpcap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpcap-packet = { path = "rpcap-packet" }
pcap = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }

[features]
default = ["pcap"]

[workspace]
members = ["rpcap-packet", "examples/*", "rpcap-impl"]
default-members = ["rpcap-packet"]

[workspace.package]
authors = ["duskmoon <kp.campbell.he@duskmoon314.com>"]

[workspace.dependencies]
rpcap = { path = "." }
rpcap-impl = { path = "rpcap-impl" }
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
csv = { version = "1.3.0" }
pcap = { version = "1.2.0" }
serde = { version = "1.0.197", features = ["derive"] }
