[package]
name = "rpcap-impl"
version = "0.1.0"
edition = "2021"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
# rpcap-packet's proc-macro
packet = []

[dependencies]
darling = "0.20.8"
heck = "0.5.0"
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = "2.0.52"
