[package]
name = "rpcap-packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.7.2"
paste = "1.0.14"
strum = { version = "0.26.2", features = ["derive", "phf"] }
thiserror = "1.0.57"

[dev-dependencies]
anyhow = "1.0.80"
