[package]
name = "pcap2csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
ipnet = { version = "2.9.0", features = ["serde"] }
rpcap = { workspace = true }
serde = { workspace = true }
tqdm = "0.6.0"
